ci_cd/kubernetes/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    environment: test
    managed-by: cicd-pipeline
